--- a/UserSettings/Search.settings
+++ b/UserSettings/Search.settings
@@ -10,6 +10,9 @@ scopes = {
 	"last_search.785D90A9" = ""
 	"InspectorPreview.785D90A9" = "0"
 	"currentGroup.785D90A9" = "all"
+	"last_search.5A5D90A9" = ""
+	"InspectorPreview.5A5D90A9" = "0"
+	"currentGroup.5A5D90A9" = "all"
 }
 providers = {
 	asset = {
